        PR c++/30111         * init.c (build_value_init_noctor): Split out from...         (build_value_init): ...here.         (expand_aggr_init_1): Handle value-initialization.         * cp-tree.h: Add declaration.         * class.c (type_has_user_provided_constructor):         Handle non-class arguments.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@144112 138bc75d-0d04-0410-961f-82ee72b054a4